[tool.poetry]
name = "atbswp"
version = "0.1.0"
description = "Record mouse and keyboard actions and reproduce them identically at will"
authors = ["RMPR <akoudanilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wxPython = "^4.0"
pynput = "^1.6"
pyautogui = "^0.9.48"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
